<resources>
    <string name="ExpoLocalization_forcesRTL">unset</string>
    <string name="ExpoLocalization_supportsRTL">unset</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_description">Alert</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Cleo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asset_statements">[{ \"include\": \"https://www.meetcleo.com/.well-known/assetlinks.json\" }]</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bottomsheet_state_collapsed">Collapsed</string>
    <string name="bottomsheet_state_expanded">Expanded</string>
    <string name="bottomsheet_state_half_expanded">Half expanded</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_change_bundle_location_apply">Apply Changes</string>
    <string name="catalyst_change_bundle_location_cancel">Cancel</string>
    <string name="catalyst_change_bundle_location_input_hint">127.0.0.1:8081</string>
    <string name="catalyst_change_bundle_location_input_label">Provide a custom bundler address and port:</string>
    <string name="catalyst_change_bundle_location_instructions">"You can connect either via USB (localhost - default) or Wifi. If you connect via USB and running with a physical device, make sure you:
 1. Connect your device via USB
 2. Set the bundle location to `localhost:8081`
 3. Run this command in your terminal:
      `%1$s`"</string>
    <string name="catalyst_copy_button">"Copy
"</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_open">Open DevTools</string>
    <string name="catalyst_debug_open_disabled">Connect to the bundler to debug JavaScript</string>
    <string name="catalyst_dev_menu_header">React Native Dev Menu (%1$s)</string>
    <string name="catalyst_dev_menu_sub_header">Running %1$s</string>
    <string name="catalyst_dismiss_button">"Dismiss
(ESC)"</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector_toggle">Toggle Element Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_open_debugger_error">Failed to open DevTools. Please check that the dev server is running and reload the app.</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">"Reload
(R, R)"</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_toggle">Toggle Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="customer_io_react_native_sdk_client_source">ReactNative</string>
    <string name="customer_io_react_native_sdk_client_version">6.1.1</string>
    <string name="customer_io_site_id">119fb06850df9d17fc5c</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_web_client_id">19833914120-rc33ne7n2nm7cq29jsq9grqcl2qn6c1c.apps.googleusercontent.com</string>
    <string name="dest_title">destination title</string>
    <string name="direct_pix_payment">Direct Pix payment</string>
    <string name="document_image">Document Image</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="err_callback_null">Callback is null. Logging response</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message_authentication_expired">Sign in to use this app</string>
    <string name="error_message_bad_value">Incorrect input data</string>
    <string name="error_message_concurrent_stream_limit">Listening on too many devices</string>
    <string name="error_message_content_already_playing">Already playing that content</string>
    <string name="error_message_disconnected">Disconnected from media app</string>
    <string name="error_message_end_of_playlist">Nothing else is queued up</string>
    <string name="error_message_fallback">Something’s wrong. Try later.</string>
    <string name="sc_spark_scan_barcode_count_button">Matrix scan count button</string>
    <string name="sc_spark_scan_barcode_find_button">Barcode find button</string>
    <string name="sc_spark_scan_camera_button">Camera position button</string>
    <string name="sc_spark_scan_continuous_mode_button">Continuous mode button</string>
    <string name="sc_spark_scan_label_capture_button">Smart label capture button</string>
    <string name="sc_spark_scan_target_mode_button">Target mode button</string>
    <string name="sc_uikit_textfield_cd_action_button">Action</string>
    <string name="sc_uikit_textfield_cd_clear_button">Clear text</string>
    <string name="sc_uikit_textfield_required">*</string>
</resources>