<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="70.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.scandit.datacapture.barcode.internal.module.spark.ui.minipreview.StartStopEventScrollView android:layout_gravity="bottom" android:id="@id/toolbar_scroll_view" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="54.0dp" android:fillViewport="true">
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageButton android:id="@id/spark_scan_barcode_count_button" android:background="@android:color/transparent" android:layout_width="40.0dp" android:layout_height="40.0dp" android:src="@drawable/sc_button_ms_count_ripple" android:scaleType="centerInside" android:adjustViewBounds="true" android:contentDescription="@string/sc_spark_scan_barcode_count_button" android:layout_marginStart="6.0dp" android:layout_marginEnd="6.0dp" />
            <ImageButton android:id="@id/spark_scan_barcode_find_button" android:background="@android:color/transparent" android:layout_width="40.0dp" android:layout_height="40.0dp" android:src="@drawable/sc_button_fast_find_ripple" android:scaleType="centerInside" android:adjustViewBounds="true" android:contentDescription="@string/sc_spark_scan_barcode_find_button" android:layout_marginStart="6.0dp" android:layout_marginEnd="6.0dp" />
            <ImageButton android:id="@id/spark_scan_label_capture_button" android:background="@android:color/transparent" android:layout_width="40.0dp" android:layout_height="40.0dp" android:src="@drawable/sc_button_slc_ripple" android:scaleType="centerInside" android:adjustViewBounds="true" android:contentDescription="@string/sc_spark_scan_label_capture_button" android:layout_marginStart="6.0dp" android:layout_marginEnd="6.0dp" />
            <View android:id="@id/external_button_separator" android:background="@color/sc_spark_scan_default_toolbar_separator_color" android:visibility="gone" android:layout_width="1.0dp" android:layout_height="32.0dp" android:layout_marginStart="4.0dp" />
            <com.scandit.datacapture.barcode.internal.module.spark.ui.button.SparkScanViewTargetModeButton android:id="@id/spark_scan_target_mode_button" android:background="@android:color/transparent" android:padding="8.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:scaleType="centerInside" android:adjustViewBounds="true" android:contentDescription="@string/sc_spark_scan_target_mode_button" />
            <ImageButton android:id="@id/spark_capture_trigger_continuous_mode_button" android:background="@android:color/transparent" android:padding="8.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:src="@drawable/sc_ic_spark_scan_continuous_capture_mode" android:scaleType="centerInside" android:adjustViewBounds="true" android:contentDescription="@string/sc_spark_scan_continuous_mode_button" />
            <com.scandit.datacapture.barcode.internal.module.spark.ui.button.SparkScanViewCameraSwitchButton android:id="@id/spark_scan_camera_button" android:background="@android:color/transparent" android:padding="8.0dp" android:layout_width="48.0dp" android:layout_height="48.0dp" android:scaleType="centerInside" android:adjustViewBounds="true" android:contentDescription="@string/sc_spark_scan_camera_button" />
        </LinearLayout>
    </com.scandit.datacapture.barcode.internal.module.spark.ui.minipreview.StartStopEventScrollView>
    <View android:layout_gravity="start" android:id="@id/trigger_gradient_left" android:background="@drawable/sc_spark_scan_toolbar_gradient_left" android:layout_width="31.0dp" android:layout_height="match_parent" />
    <View android:layout_gravity="end" android:id="@id/trigger_gradient_right" android:background="@drawable/sc_spark_scan_toolbar_gradient_right" android:layout_width="31.0dp" android:layout_height="match_parent" />
</FrameLayout>
