<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/sc_label_wrapper" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sc_uikit_textfield_label_margin_bottom" android:baselineAligned="false">
        <TextView android:textSize="@dimen/sc_uikit_label_medium_text_size" android:textColor="@color/sc_uikit_text_secondary" android:id="@id/sc_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:letterSpacing="@dimen/sc_uikit_label_medium_letter_spacing" />
        <TextView android:textSize="@dimen/sc_uikit_label_medium_text_size" android:textColor="@color/sc_uikit_text_danger" android:id="@id/sc_required_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sc_uikit_textfield_required" android:letterSpacing="@dimen/sc_uikit_label_medium_letter_spacing" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/sc_input_container" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/sc_uikit_textfield_input_height_regular" android:paddingStart="@dimen/sc_uikit_textfield_padding_left" android:paddingEnd="@dimen/sc_uikit_textfield_padding_right">
        <com.scandit.datacapture.core.internal.sdk.uikit.utils.views.KeyboardAwareEditText android:textSize="@dimen/sc_uikit_body_medium_text_size" android:textColor="@color/sc_uikit_text_primary" android:textColorHint="@color/sc_uikit_text_hint" android:id="@id/sc_edit_text" android:background="@null" android:layout_width="0.0dp" android:layout_height="wrap_content" android:maxLines="1" android:layout_weight="1.0" android:inputType="text" android:imeOptions="actionDone|flagNoExtractUi" android:letterSpacing="@dimen/sc_uikit_body_medium_letter_spacing" android:importantForAutofill="no" />
        <LinearLayout android:orientation="horizontal" android:id="@id/sc_buttons_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:divider="@drawable/sc_uikit_textfield_divider" android:showDividers="middle" android:layout_marginStart="@dimen/sc_uikit_textfield_padding_left">
            <ImageButton android:id="@id/sc_clear_button" android:background="?android:selectableItemBackgroundBorderless" android:padding="@dimen/sc_textfield_icon_padding" android:visibility="gone" android:layout_width="@dimen/sc_textfield_icon_button_touch_target" android:layout_height="@dimen/sc_textfield_icon_button_touch_target" android:scaleType="centerInside" android:contentDescription="@string/sc_uikit_textfield_cd_clear_button" />
            <ImageButton android:id="@id/sc_action_button" android:background="?android:selectableItemBackgroundBorderless" android:padding="@dimen/sc_textfield_icon_padding" android:visibility="gone" android:layout_width="@dimen/sc_textfield_icon_button_touch_target" android:layout_height="@dimen/sc_textfield_icon_button_touch_target" android:scaleType="centerInside" android:contentDescription="@string/sc_uikit_textfield_cd_action_button" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="@dimen/sc_uikit_body_xs_text_size" android:textColor="@color/sc_uikit_text_primary" android:id="@id/sc_helper_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sc_uikit_textfield_helper_margin_top" android:letterSpacing="@dimen/sc_uikit_body_xs_letter_spacing" />
</LinearLayout>
